# gatezero

./: .gitignore  README.md  docker-compose.yml
gateway-manager/: Dockerfile  package.json  tsconfig.build.json
gateway-manager/src/: app.module.ts  main.ts
gateway-manager/src/config/: app.config.ts  database.config.ts
gateway-manager/src/controllers/: health.controller.ts
gateway-manager/src/modules/: health.module.ts
gateway-manager/src/repositories/: health.repository.ts
gateway-manager/src/schemas/: health.schema.ts
gateway-manager/src/services/: health.service.ts
portal/: README.md  bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
portal/src/: App.tsx  index.css
portal/src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
portal/src/pages/: CreateGateway.tsx  Dashboard.tsx  Gateways.tsx  Lookup.tsx  Settings.tsx  Status.tsx
portal/src/store/: useStore.ts
router/: .env.example  Cargo.toml  Dockerfile
router/src/: main.rs
router/src/db/: mod.rs
router/src/models/: health.rs
router/src/routes/: health.rs
router/src/services/: health.rs
